# python-holidays-ru

./: CHANGES  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
holidays_ru/: __init__.py
test/: test_holiday_ru.py
