[metadata]
name = holidays_ru
version = attr: holidays_ru.__version__
description = Generate and work with holidays Russia in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xvlady5/python-holidays-ru
author = xvlady5
author_email = xvlady5@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
packages =
    holidays_ru
python_requires = >=3.7

[options.package_data]
holidays = py.typed

[bumpversion]
current_version = 0.1

[rstcheck]
ignore_language = python
ignore_directives = automodule
